# learnanything-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ai_agent_project_brief.md
src/learn_anything/: agents.py  book_schema.py  crew.py  html_builder.py  llm_config.py  main.py  tasks.py
src/learn_anything/agents_srp/: __init__.py  assessment_designer.py  chapter_creator_1.py  chapter_creator_2.py  html_document_generator.py  pdf_document_generator.py  resource_curator.py  structure_analyzer.py  topic_analysis_specialist.py  tutorial_compiler.py
src/learn_anything/config/: agents.yaml  tasks.yaml
src/learn_anything/tasks_srp/: __init__.py  analyze_chapter_structure.py  analyze_topic_and_requirements.py  compile_comprehensive_tutorial.py  convert_tutorial_to_html_format.py  convert_tutorial_to_pdf_format.py  create_assessments_and_exercises.py  create_assigned_chapters_1.py  create_assigned_chapters_2.py  curate_and_verify_resources.py
src/learn_anything/tools/: html_builder.py
