[project]
name = "comprehensive_tutorial_generator"
version = "0.1.0"
description = "comprehensive_tutorial_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0",
    "jambo",
    "markdown>=3.5",
]

[project.scripts]
comprehensive_tutorial_generator = "comprehensive_tutorial_generator.main:run"
run_crew = "comprehensive_tutorial_generator.main:run"
train = "comprehensive_tutorial_generator.main:train"
replay = "comprehensive_tutorial_generator.main:replay"
test = "comprehensive_tutorial_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
